# IAS0060-Robotics-2021

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/basiashvili_cervera/: subscriber.py
devel/lib/pkgconfig/: basiashvili_cervera.pc
devel/share/basiashvili_cervera/cmake/: basiashvili_cerveraConfig.cmake
src/basiashvili_cervera/: CMakeLists.txt  package.xml
src/basiashvili_cervera/scripts/: subscriber_publisher.py
src/ucat_simulator/ucat_simulator-master/: README.md
src/ucat_simulator/ucat_simulator-master/sim_link/: CMakeLists.txt  package.xml
src/ucat_simulator/ucat_simulator-master/sim_link/data/objects/: 2x2x1tank.osgt  redball.osgt
src/ucat_simulator/ucat_simulator-master/sim_link/data/robots/: smallturtle.urdf
src/ucat_simulator/ucat_simulator-master/sim_link/data/scenes/: UWSimScene.dtd  science_museum.xml
src/ucat_simulator/ucat_simulator-master/sim_link/include/: motor.h
src/ucat_simulator/ucat_simulator-master/sim_link/launch/: london_sim.launch
src/ucat_simulator/ucat_simulator-master/sim_link/scripts/: arduino_interface.py
src/ucat_simulator/ucat_simulator-master/sim_link/src/: robot2simulation.cpp
src/ucat_simulator/ucat_simulator-master/tut_arrows/: CMakeLists.txt  README  package.xml
src/ucat_simulator/ucat_simulator-master/tut_arrows/bags/: errors.bag  errors_dynamic_circle.bag  pinger.bag
src/ucat_simulator/ucat_simulator-master/tut_arrows/include/tut_arrows/: ControllerFactory.h  ControllerUtils.h  FluidPressure.h  MainControl.h  MathUtils.h  MotionEstimator.h  ObstacleAvoidance.h  Ps3Config.h  QuatUtils.h  Target.h  Trajectory.h  TrajectoryUtils.h  UcatDynamics.h  WrenchDriver.h  ekf.h
src/ucat_simulator/ucat_simulator-master/tut_arrows/include/tut_arrows/Controllers/: ConstantController.h  IController.h  ModelFree.h  NPD.h  PID.h  RISE.h  SMC.h  SawtoothController.h
src/ucat_simulator/ucat_simulator-master/tut_arrows/launch/: control.launch  control_joy.launch  joy.launch  ps3.launch  record.launch  test_comm.launch  tracking_simulation.launch
src/ucat_simulator/ucat_simulator-master/tut_arrows/scripts/: BeaconPose.py  Dynamics.py  Imu.py  MotionTwist.py  Odom3d.py  QuatToEulerNode.py  Quaternion.py  SnelliusPothenot.py  TrackingSim.py  fuzzyController.py  key_teleop_wrench.py
src/ucat_simulator/ucat_simulator-master/tut_arrows/src/: ExplorerController.cpp  MainControl.cpp  ModemPositionPublisher.cpp  ModemRangeDriver.cpp  MotionEstimator.cpp  ObstacleAvoidance.cpp  QuatUtils.cpp  RemoteController.cpp  RemoteDriver.cpp  Target.cpp  Trajectory.cpp  TrajectoryUtils.cpp  UcatDynamics.cpp  WrenchDriver.cpp  WrenchToAcousticMsg.cpp  coordinateConverter.cpp  ekf.cpp  joy2wrench.cpp  ranges2pointcloud.cpp  spawnObject.cpp
src/ucat_simulator/ucat_simulator-master/tut_arrows/src/CppNumericalSolvers/: LbfgsSolver.cpp  Meta.h  main.cpp
src/ucat_simulator/ucat_simulator-master/tut_arrows_msgs/: CMakeLists.txt  package.xml
src/ucat_simulator/ucat_simulator-master/tut_arrows_msgs/msg/: BeaconPing.msg  Flipper.msg  FlipperFeedback.msg  Flippers.msg  FlippersFeedback.msg  FlippersModeCmd.msg  Hidrophones.msg  ModemRange.msg  MotorParameters.msg  SSCalc.msg  SendModemRange.msg  Target.msg  TrajectoryPoint.msg  VisionDetection.msg
src/ucat_simulator/ucat_simulator-master/tut_arrows_msgs/srv/: GetDescription.srv  GetMotorParameters.srv  GetXYZ.srv  SetController.srv  SetImuYaw.srv  SetMotorParameters.srv  SetTrajectory.srv  XYZToLatLonDepth.srv
src/ucat_simulator/ucat_simulator-master/uwsim_arrows/: CMakeLists.txt  package.xml  simdev_plugins.xml
src/ucat_simulator/ucat_simulator-master/uwsim_arrows/data/meshes/: ArrowsFin.blend  ArrowsFin.dae  ArrowsFin.ive  BrickWall.blend  BrickWall.dae  BrickWall.ive  Sonar.blend  Sonar.ive  swimmingpool.blend  swimmingpool.ive
src/ucat_simulator/ucat_simulator-master/uwsim_arrows/data/robots/: U-CAT.rviz.urdf  U-CAT.urdf
src/ucat_simulator/ucat_simulator-master/uwsim_arrows/data/scenes/: UWSimScene.dtd  nowreck.xml  rummu.xml  swimmingpool.xml  wreck.xml
src/ucat_simulator/ucat_simulator-master/uwsim_arrows/include/uwsim_arrows/: SimDev_BeaconReceiver.h  SimDev_Depth2Sonar.h  SimDev_DirectionalReceiver.h  SimDev_Flipper.h  SimDev_FluidPressure.h  SimDev_VehicleFin.h
src/ucat_simulator/ucat_simulator-master/uwsim_arrows/launch/: bts.launch  config.rviz  depth_control.launch  map.bt  sensors.rviz  swimmingpool.launch  uwsim.launch  wreck.launch
src/ucat_simulator/ucat_simulator-master/uwsim_arrows/src/: SetTargetFromRviz.cpp  SimDev_BeaconReceiver.cpp  SimDev_Depth2Sonar.cpp  SimDev_DirectionalReceiver.cpp  SimDev_Flipper.cpp  SimDev_FluidPressure.cpp  SimDev_VehicleFin.cpp  imu2tf.cpp  ucat_buoyance_driver.cpp  uwsim_arrows.cpp
src/ucat_simulator/ucat_simulator-master/uwsim_physics/: CMakeLists.txt  mainpage.dox  package.xml  simdev_plugins.xml
src/ucat_simulator/ucat_simulator-master/uwsim_physics/include/uwsim_physics/: SimDev_VehiclePhysics.h  SimDev_VehiclePhysicsForce.h  SimDev_VehiclePhysicsForces.h
src/ucat_simulator/ucat_simulator-master/uwsim_physics/src/: SimDev_VehiclePhysics.cpp  SimDev_VehiclePhysicsForce.cpp  SimDev_VehiclePhysicsForces.cpp  setThrusterForce.cpp  uwsim_physics.cpp
src/ucat_simulator/ucat_simulator-master/uwsim_physics_msgs/: CMakeLists.txt  package.xml
src/ucat_simulator/ucat_simulator-master/uwsim_physics_msgs/msg/: ForceCmd.msg  SkeletonMovement.msg
