<?xml version="1.0"?>
<package>
  <name>uwsim_arrows</name>
  <version>0.0.0</version>
  <description>The uwsim_game package</description>

  <maintainer email="yuri.gavshin@gmail.com">Yuri Gavshin</maintainer>
  <author email="yuri.gavshin@gmail.com">Yuri Gavshin</author>  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>uwsim</build_depend>
  <build_depend>uwsim_physics</build_depend>
  <build_depend>uwsim_physics_msgs</build_depend>
  <build_depend>tut_arrows_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>uwsim</run_depend>
  <run_depend>uwsim_physics</run_depend>
  <run_depend>uwsim_physics_msgs</run_depend>
  <run_depend>tut_arrows_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <uwsim plugin="${prefix}/simdev_plugins.xml" />
  </export>
</package>
