<package>
  <name>uwsim_physics</name>
  <version>0.0.0</version>
  <description>uwsim_physics</description>
  <maintainer email="yuri.gavshin@gmail.com">Yuri Gavshin</maintainer>
  <author email="yuri.gavshin@gmail.com">Yuri Gavshin</author>  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>uwsim_physics_msgs</build_depend>
  <build_depend>uwsim</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>uwsim_physics_msgs</run_depend>
  <run_depend>uwsim</run_depend>

  <export>
    <uwsim plugin="${prefix}/simdev_plugins.xml" />
  </export>
</package>


