<?xml version="1.0"?>
<package>
  <name>uwsim_physics_msgs</name>
  <version>0.0.0</version>
  <description>The uwsim_physics_msgs package</description>
  <maintainer email="yuri.gavshin@gmail.com">Yuri Gavshin</maintainer>
  <license>BSD</license>
  <author email="yuri.gavshin@gmail.com">Yuri Gavshin</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  
</package>